# singlestore-wasm-toolkit

./: .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile-shell  Introduction.html  Makefile  README.md  index.html  print.html  searchindex.js  searchindex.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: finalize.sh  wasmtime_wasi.sh
.github/workflows/: ci.yml  gh-pages.yml
cpp/power/: Makefile  power.h
cpp/split/: Makefile  README.md
crates/debugger/: Cargo.toml  README.md  debugger.wit
crates/debugger-macro/: Cargo.toml
crates/debugger-macro-impl/: Cargo.toml
crates/debugger-macro-impl/src/: lib.rs
crates/debugger-macro/src/: lib.rs
crates/debugger/src/: handle.rs  main.rs  server.rs
debugger/: Cargo.toml
debugger/src/: main.rs
docker/: Dockerfile-shell  Dockerfile-vscode  install-entry-point.sh  install-rust-tools.sh  install-wasi-sdk.sh  install-wasmtime.sh  install-wit-bindgen.sh
docs/: Makefile  Quickstart-1-Run-WASM.md  Quickstart-2-Build-WASM-CPP.md  Quickstart-2-Build-WASM-Rust.md  SingleStore-Wasm-UDF-Tutorial.md  Tutorial-Developing-Wasm-UDF-CPP.md  Tutorial-Developing-Wasm-UDF-Rust.md  book.toml
docs/src/: Makefile  SUMMARY.md  Tutorial-Deploy-Power-Cloud.md  Tutorial-Deploy-Power-Push.md  Tutorial-Deploy-Power.m4.md  Tutorial-Deploy-Power.md  Tutorial-Deploy-Prologue.md  Tutorial-Deploy-Split-Cloud.md  Tutorial-Deploy-Split-Push.md  Tutorial-Deploy-Split.m4.md  Tutorial-Deploy-Split.md  Tutorial-Deploy.md  Tutorial-Examples.md  Tutorial-Impl-CPP-Power.md  Tutorial-Impl-CPP-Split.md  Tutorial-Impl-CPP.md  Tutorial-Impl-Rust-Power.m4.md  Tutorial-Impl-Rust-Power.md  Tutorial-Impl-Rust-Prologue.md  Tutorial-Impl-Rust-Split.m4.md  Tutorial-Impl-Rust-Split.md  Tutorial-Impl-Rust.md  Tutorial-Impl.md  Tutorial-Overview.md  Tutorial-Running-Power.md  Tutorial-Running-Split.md  Tutorial-Running.md  Tutorial-Setup-Container-Standalone.md  Tutorial-Setup-Container-VSCode.md  Tutorial-Setup-Container.md  Tutorial-Setup-Local.md  Tutorial-Setup.md  Tutorial-Test-Power.m4.md  Tutorial-Test-Power.md  Tutorial-Test-Prologue.md  Tutorial-Test-Split.m4.md  Tutorial-Test-Split.md  Tutorial-Test.md  Tutorial-WIT-Power.m4.md  Tutorial-WIT-Power.md  (+5 more)
examples/: Makefile
examples/cpp/power/: Makefile  power.c  power.h  power_impl.c
examples/cpp/powervec/: Makefile  create_loader.sh  extension.wit  extension_impl.c
examples/cpp/split/: Makefile  split.cpp  split.h  split.wit  split_impl.cpp
examples/rust/: README.md
examples/rust/ccase/: Cargo.toml  Makefile  README.md  ccase.wit
examples/rust/ccase/src/: lib.rs
examples/rust/dates/: Cargo.toml  Makefile  dates.wit
examples/rust/echo/: Cargo.toml  echo.wit
examples/rust/echo-remote-debug/: Cargo.toml  Makefile  README.md
examples/rust/echo-remote-debug/src/: lib.rs
examples/rust/fft/: Cargo.toml  Makefile  README.md  fft.wit
examples/rust/fft/src/: lib.rs
examples/rust/fft/test/: main.rs
examples/rust/fprofile/: Cargo.toml  fprofile.wit
examples/rust/geo/: Cargo.toml  Makefile  geo.wit
examples/rust/jsonpath/: Cargo.toml  Makefile  README.md  jsonpath.wit
examples/rust/jsonschema/: Cargo.toml  README.md  extension.wit
examples/rust/jsonschema/src/: lib.rs
examples/rust/orafce/: Cargo.toml  orafce.wit
examples/rust/orafce/src/: lib.rs
examples/rust/orafce/test/: main.rs
examples/rust/power/: Cargo.toml  Makefile  power.wit
examples/rust/power/src/: lib.rs
examples/rust/regex/: Cargo.toml  Makefile  README.md  s2regex.wit
examples/rust/regex/src/: lib.rs
examples/rust/sentiment/: Cargo.toml  README.md  sentiment.wit
examples/rust/sentiment/src/: lib.rs
examples/rust/sentimentable/: Cargo.toml  Makefile  README.md  sentimentable.wit
examples/rust/sentimentable/.cargo/: config.toml
examples/rust/sentimentable/src/: lib.rs
examples/rust/simd/: Cargo.toml  README.md  simd.wit
examples/rust/split/: Cargo.toml  Makefile  README.md  split.wit
examples/rust/split/src/: lib.rs
examples/rust/sumstat-naive/: Cargo.toml  README.md  create_loader.sh  extension.wit
examples/rust/templates/: Cargo.toml  Makefile  README.md  templates.wit  test.py
examples/rust/templates/src/: lib.rs
examples/rust/timezonets/: Cargo.toml  Makefile  README.md  tsz.wit
examples/rust/timezonets/src/: lib.rs
examples/rust/unicode-normalizer/: Cargo.toml  Makefile  unicode_normalizer.wit
examples/rust/usergenerator/: Cargo.toml  Makefile  README.md  usergenerator.wit
examples/rust/usergenerator-remote-debug/: Cargo.toml  Makefile
examples/rust/usergenerator-remote-debug/src/: lib.rs
examples/rust/xpath/: Cargo.toml  Makefile  README.md  xpath.wit
html/: 404.html  Tutorial-Deploy-Power-Cloud.html  Tutorial-Deploy-Power-Push.html  Tutorial-Deploy-Power.html  Tutorial-Deploy-Split-Cloud.html  Tutorial-Deploy-Split-Push.html  Tutorial-Deploy-Split.html  Tutorial-Deploy.html  Tutorial-Examples.html  Tutorial-Impl-CPP-Power.html  Tutorial-Impl-CPP-Split.html  Tutorial-Impl-CPP.html  Tutorial-Impl-Rust-Power.html  Tutorial-Impl-Rust-Split.html  Tutorial-Impl-Rust.html  Tutorial-Impl.html  Tutorial-Overview.html  Tutorial-Running-Power.html  Tutorial-Running-Split.html  Tutorial-Running.html  Tutorial-Setup-Container-Standalone.html  Tutorial-Setup-Container-VSCode.html  Tutorial-Setup-Container.html  Tutorial-Setup-Local.html  Tutorial-Setup.html  Tutorial-Test-Power.html  Tutorial-Test-Split.html  Tutorial-Test.html  Tutorial-WIT-Power.html  Tutorial-WIT-Split.html  Tutorial-WIT.html  Tutorial-WrapUp.html  index.html  print.html  searchindex.js  searchindex.json
rust/power/: Cargo.toml
rust/power/src/: lib.rs
rust/split/: README.md  split.wit
scripts/: debug  dev-shell  dev-shell-init  docker-shell.sh
sentiment-rust/: Cargo.toml  README.md  sentiment.wit
sentiment-rust/src/: lib.rs
(+13 files in other folders)
