[package]
name = "orafce"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
chrono-tz = { version = "0.5.1", features = ["serde"] }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }

[lib]
crate-type = ["cdylib"]

#[[bin]]
#name = "test"
#path = "test/main.rs"
