[package]
name = "split"
version = "0.1.0"
edition = "2018"

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
serde = { version = "1.0", features = ["derive"] }
debugger-macro = { path = "../../../crates/debugger-macro" }

[lib]
crate-type = ["cdylib"]
