[package]
name = "templates"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }
tera = "1.19"
serde_json = "1.0"
skyscraper = "0.4"
jsonpath_lib = "0.1"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"

[lib]
crate-type = ["cdylib"]
