[package]
name = "usergenerator"
version = "0.0.1"
edition = "2021"

[dependencies]
fakeit = "1.1.1"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
serde = { version = "1.0", features = ["derive"] }
debugger-macro = { path = "../../../crates/debugger-macro" }

[lib]
crate-type = ["cdylib"]
